--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
 <body>
     <div id="top">
 	    <div id="main">
-		    <header id="logo">LOGO</header>
+		    <header id="logo">sech1p's corner</header>
     		<nav id="links">
 	    		<ul>
-		    		<li><a href="?">Link</a></li>
-			    	<li><a href="?">Link</a></li>
-				    <li><a href="?">Link</a></li>
-    				<li><a href="?">Link</a></li>
-	    			<li><a href="?">Link</a></li>
+		    		<li><a href="blog.php">Blog</a></li>
+			    	<li><a href="about.html">About me</a></li>
 		    	</ul>
     		</nav>
 	    	<div id="menu">
