--- a/errors/403.html
+++ b/errors/403.html
@@ -13,6 +13,7 @@
     		<nav id="links">
 	    		<ul>
 		    		<li><a href="blog.php">Blog</a></li>
+					<li><a href="https://elizaemiliaa.wordpress.com">Blog (WordPress)</a></li>
 			    	<li><a href="about.html">About me</a></li>
 		    	</ul>
     		</nav>
