--- a/errors/404.html
+++ b/errors/404.html
@@ -14,7 +14,7 @@
 	    		<ul>
 		    		<li><a href="blog.php">Blog</a></li>
 					<li><a href="https://elizaemiliaa.wordpress.com">Blog (WordPress)</a></li>
-			    	<li><a href="about.html">About me</a></li>
+			    	<li><a href="about.php">About me</a></li>
 		    	</ul>
     		</nav>
 	    	<div id="menu">
