🔃 Update errors pages

--- a/errors/403.html
+++ b/errors/403.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Document</title>
+	<title>sech1p's corner</title>
 </head>
 <body>
     <div id="top">
@@ -12,9 +12,10 @@
 		    <header id="logo">sech1p's corner</header>
     		<nav id="links">
 	    		<ul>
-		    		<li><a href="blog.php">Blog</a></li>
+		    		<li><a href="index.php">Home</a></li>
 					<li><a href="https://elizaemiliaa.wordpress.com">Blog (WordPress)</a></li>
 			    	<li><a href="about.php">About me</a></li>
+					<li><a href="contact.php">Contact & Social Medias</a></li>
 		    	</ul>
     		</nav>
 	    	<div id="menu">
@@ -28,6 +29,8 @@
 							<li><a href="https://t.me/sech1p">Telegram</a></li>
 							<li><b>Friends</b></li>
 							<li><a href="https://ponymare.ovh"><img src="https://ponymare.ovh/res/trixie.gif" title="my cute gf emilia :3"></a></li>
+							<li><b>My Button</b></li>
+							<li><img src="resources/sech1p.gif" /></li>
         					<li><b>Buttons (88x31)</b></li>
 							<!--
 								Credits:
