--- a/errors/404.html
+++ b/errors/404.html
@@ -16,6 +16,7 @@
 	    		<ul>
 		    		<li><a href="index.php">Home</a></li>
 					<li><a href="https://elizaemiliaa.wordpress.com">Blog (WordPress)</a></li>
+					<li><a href="https://sech1p.dreamwidth.org">Blog (Dreamwidth)</a></li>
 			    	<li><a href="about.php">About me</a></li>
 					<li><a href="contact.php">Contact & Social Medias</a></li>
 		    	</ul>
