--- a/errors/404.html
+++ b/errors/404.html
@@ -18,6 +18,7 @@
 					<li><a href="https://elizaemiliaa.wordpress.com">Blog (WordPress)</a></li>
 					<li><a href="https://sech1p.dreamwidth.org">Blog (Dreamwidth)</a></li>
 			    	<li><a href="about.php">About me</a></li>
+					<li><a href="machines.php">Machines</a></li>
 					<li><a href="contact.php">Contact & Social Medias</a></li>
 		    	</ul>
     		</nav>
