--- a/errors/403.html
+++ b/errors/403.html
@@ -15,8 +15,7 @@
     		<nav id="links">
 	    		<ul>
 		    		<li><a href="index.php">Home</a></li>
-					<li><a href="https://elizaemiliaa.wordpress.com">Blog (WordPress)</a></li>
-					<li><a href="https://sech1p.dreamwidth.org">Blog (Dreamwidth)</a></li>
+					<li><a href="#">Blog (coming soon!)</a></li>
 			    	<li><a href="about.php">About me</a></li>
 					<li><a href="machines.php">Machines</a></li>
 					<li><a href="contact.php">Contact & Social Medias</a></li>
@@ -33,7 +32,6 @@
 							<li><a href="https://t.me/sech1p">Telegram</a></li>
 							<li><b>Friends</b></li>
 							<li><a href="https://ponymare.ovh"><img src="https://ponymare.ovh/res/trixie.gif" title="my cute gf emilia :3"></a></li>
-							<li><a href="https://anemonik.neocities.org"><img src="https://anemonik.neocities.org/img/anemonek.png" title="Anemonik"></a></li>
 							<li><a href="https://karibooru.love"><img src="https://karibooru.love/88x31.png" title="Karibooru"></a></li>
 							<li><b>My Button</b></li>
 							<li><img src="resources/sech1p.gif" /></li>
@@ -60,7 +58,7 @@
 					<p>You don't have access to provided page. Wanna back to <a href="https://sech1p.ovh">main page</a>?</p>
     		    </article>
 	    	</div>
-		    <footer id="footer">&copy; 2024 Eliza Emilia "sech1p" Semeniuk. Licensed under Apache-2.0 license.</footer>
+		    <footer id="footer">&copy; 2025 Eliza Emilia "sech1p" Semeniuk. Licensed under Apache-2.0 license.</footer>
     	</div>
     </div>
 </body>
