➕ Add Made on Mac 88x31 button and Windows 98 Japanese banner to footer

--- a/errors/403.html
+++ b/errors/403.html
@@ -71,7 +71,13 @@
 					<p>You don't have access to provided page. Wanna back to <a href="https://sech1p.ovh">main page</a>?</p>
     		    </article>
 	    	</div>
-		    <footer id="footer">&copy; 2025 Eliza Emilia "sech1p" Semeniuk. Licensed under Apache-2.0 license.</footer>
+		    <footer id="footer">
+				&copy; 2025 Eliza Emilia "sech1p" Semeniuk. Licensed under Apache-2.0 license.
+				<br>
+				<img src="resources/made_on_mac.gif" />
+				<br>
+				<img src="resources/w98_banner.gif" />
+			</footer>
     	</div>
     </div>
 </body>
