🌸 Make trixie a gradient <3

--- a/errors/403.html
+++ b/errors/403.html
@@ -74,7 +74,7 @@
 							<li><a href="https://sech1p.link">My card</a></li>
 							<li><a href="https://t.me/sech1p">Telegram</a></li>
 							<li><b>Friends</b></li>
-							<li><a href="https://ponymare.ovh"><img src="https://ponymare.ovh/res/trixie.gif" title="my cute gf emilia :3"></a></li>
+				    		<li><a id="trixie" title="my cute gf emilia :3" href="https://ponymare.ovh">Trixie</a></li>
 							<li><a href="https://karibooru.love"><img src="https://karibooru.love/88x31.png" title="Karibooru"></a></li>
 							<li><b>My Button</b></li>
 							<li><img src="resources/sech1p.gif" /></li>
